feat: reorganize toc

--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
-This is the decon version of the code.
-This is some
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sirjana Pulami Lab</title>
+    <style>
+        .toc {
+            display: flex;
+            flex-direction: column;
+        }
+    </style>
+</head>
+<body>
+    <div class="toc">
+        <a href="/form/personaldetails.html">Personal Details</a>
+        
+        <a href="/media/audio.html">Audio</a>
+        <a href="/media/video.html">Video</a>
+        <a href="/media/Youtube.html">Youtube</a>
+
+        <a href="/gui/ludo.html">Ludo</a>
+        <a href="/gui/chess.html">Chess</a>
+
+        <a href="/practice/list.html">List Practice</a>
+    </div>
+</body>
+</html>
