--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="/gui/chess.html">Chess</a>
 
         <a href="/practice/list.html">List Practice</a>
+        <a href="/solarsystem/Animation.html">Solar System</a>
+        
     </div>
 </body>
 </html>
