--- a/form/personaldetails.html
+++ b/form/personaldetails.html
@@ -36,11 +36,14 @@
         }
 
         .name input {
-            width: 300px;
+            width: 200px;
         }
 
         .phoneno input {
-            width: 300px;
+            width: 200px;
+        }
+        textarea {
+            width: 100%;
         }
     </style>
 </head>
@@ -153,7 +156,7 @@
                     <input type="checkbox" name="checkboxstatus" />Swimming
                 </div>
             </div>
-            <textarea rows="10" cols="110" placeholder="Personal details....."></textarea>
+            <textarea rows="10" placeholder="Personal details....."></textarea>
             <div class="flex">
                 <button type="submit">Save</button>
                 <button type="reset">Clear</button>
