--- a/index.html
+++ b/index.html
@@ -108,28 +108,26 @@
     <div class="home">
         <div class="nav">
             <div class="left-nav">
-                <li class="logo">SIRJANA</li>
+                <li class="logo">REPORT</li>
                 <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/toc.html">TOC</a></li>
-                <li class="nav-item"><a href="/solarsystem/Animation.html">Solar System</a></li>
+                <li class="nav-item"><a href="/">Details</a></li>
+                <li class="nav-item"><a href="/">Video</a></li>
 
             </div>
             <div class="right-nav">
                 Right
             </div>
         </div>
-        <div class="homecontainer">
+        <div class="homecontainer">How
             <div class="left">
                 <div>
-                    <h1>Sirjana's Diary</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, libero? Tenetur hic soluta, beatae
-                        repellendus sapiente ea consectetur laboriosam perferendis officia nulla eveniet harum corrupti,
-                        eligendi quasi ex, laudantium ducimus?</p>
+                    <h1>Lab Report</h1>
+                    <p>A lab report is a structured document used to present the process and results of a scientific experiment</p>
 
                     <div class="actions">
-                        <a href="/toc.html"><button class="gtst">Get Started</button></a>
-                        <button class="circle">sp</button>
-                        <a href="suraj">suraj pulami magar</a>
+                        <a href="/toc.html"><button class="gtst">Log In</button></a>
+                        <button class="circle">skip</button>
+                        <a href="suraj">About project</a>
                     </div>
                 </div>
 
