feat:delete home

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 Right
             </div>
         </div>
-        <div class="homecontainer">How
+        <div class="homecontainer">
             <div class="left">
                 <div>
                     <h1>Lab Report</h1>
