feat:Bim subject

--- a/form/personaldetails.html
+++ b/form/personaldetails.html
@@ -72,7 +72,7 @@
                     <option value="usa">USA</option>
                     <option value="aus">Australia</option>
                     <option value="fin">Finland</option>
-                    <option value Name"/>="chin">China</option>
+                    <option value="chin">China</option>
                     <option value="rus">Russia</option>
                     <option value="Jap">Japan</option>
                     <option value="korea">Korea</option>
@@ -93,36 +93,36 @@
             </div>
             <div class="phoneno">
                 Temporary Address <input placeholder="Enter your Addresss" />
-                Ward no. <input type="text" name="" id="ward" />
+                Ward no. <input placeholder="Enter your Ward no" />
             </div>
             <div class="phoneno">
-                Permanent Address <input type="text" name="paddress" />
-                Ward no. <input type="text" name="" id="Padd">
+                Permanent Address <input placeholder="Enter your Address" />
+                Ward no. <input placeholder="Enter your Ward no">
             </div>
             <div class="phoneno">
-                Citizenship no. <input type="text" name="ctno" />
+                Citizenship no. <input placeholder="Enter your Citizenship no" />
             </div>
             <div class="phoneno">    
-                Passport no. <input type="text" name="passno" />
+                Passport no. <input placeholder="Enter your Passport no" />
             </div>
             <div class="phoneno">
-                Father's Name <input type="text" name="fthnme" />
+                Father's Name <input placeholder="Enter your Name" />
 
 
-                Phone no <input type="text" name="pnfth" />
+                Phone no <input placeholder="Enter your Phone no" />
 
             </div>
             <div class="phoneno">
-                Mother's Name <input type="text" name="mthnam" />
+                Mother's Name <input placeholder="Enter your Name" />
 
 
-                Phone no <input type="text" name="mthpno" />
+                Phone no <input placeholder="Enter your Phone no" />
             </div>
             <div class="phoneno">
-                Grandfather's Name <input type="text" name="gfnme" />
+                Grandfather's Name <input placeholder="Enter your Name" />
             </div>
             <div class="phoneno">
-                Grandmother's Name <input type="text" name="gmth" />
+                Grandmother's Name <input placeholder="Enter your Name" />
             </div>
             <div>
                 <table border="1">
