--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
 
         }
 
+        .nav .right-nav {
+            text-align: rightsr;
+        }
+
+        .nav .right-nav .circle {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: black;
+        }
+
         .logo {
             font-size: 24px;
             font-weight: 700;
@@ -98,9 +111,8 @@
         .nav li {
             list-style: none;
         }
-        .nav li a {
 
-        }
+        .nav li a {}
     </style>
 </head>
 
@@ -110,24 +122,41 @@
             <div class="left-nav">
                 <li class="logo">REPORT</li>
                 <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/">Details</a></li>
-                <li class="nav-item"><a href="/">Video</a></li>
+                <li class="nav-item"><a href="/practice/list.html">Syllabus </a></li>
+                <li class="nav-item"><a href="form/personaldetails.html">form</a></li>
+                <li class="nav-item"><a href="/media/audio.html">Audio</a></li>
+                <li class="nav-item"><a href="/media/video.html">Video</a></li>
+                <li class="nav-item"><a href="/media/Youtube.html">Youtube</a></li>
+                <li class="nav-item"><a href="/gui/ludo.html">Ludo</a></li>
+                <li class="nav-item"><a href="/gui/chess.html">Chess</a></li>
 
             </div>
             <div class="right-nav">
-                Right
+                <button class="circle">
+                    <svg class="svg-icon"
+                        style="width: 5em; height: 5em;vertical-align: middle;fill: currentColor;overflow: hidden;"
+                        viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M177.50016 307.2l614.4 0c11.30496 0 20.48-9.15456 20.48-20.48s-9.17504-20.48-20.48-20.48l-614.4 0c-11.30496 0-20.48 9.15456-20.48 20.48S166.17472 307.2 177.50016 307.2z" />
+                        <path
+                            d="M177.50016 757.76l614.4 0c11.30496 0 20.48-9.15456 20.48-20.48s-9.17504-20.48-20.48-20.48l-614.4 0c-11.30496 0-20.48 9.15456-20.48 20.48S166.17472 757.76 177.50016 757.76z" />
+                        <path
+                            d="M177.50016 532.48l614.4 0c11.30496 0 20.48-9.15456 20.48-20.48s-9.17504-20.48-20.48-20.48l-614.4 0c-11.30496 0-20.48 9.15456-20.48 20.48S166.17472 532.48 177.50016 532.48z" />
+                    </svg>
+                </button>
             </div>
         </div>
         <div class="homecontainer">
             <div class="left">
                 <div>
                     <h1>Lab Report</h1>
-                    <p>A lab report is a structured document used to present the process and results of a scientific experiment</p>
+                    <p>A lab report is a structured document used to present the process and results of a scientific
+                        experiment</p>
 
                     <div class="actions">
                         <a href="/toc.html"><button class="gtst">Log In</button></a>
                         <button class="circle">skip</button>
-                        <a href="suraj">About project</a>
+                        <a href="project">About project</a>
                     </div>
                 </div>
 
